xlate, we has it

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -32,6 +32,7 @@ sortByPriceAsc = Lowest Price
 sortByPriceDesc = Highest Price
 sortByPurchases = Purchases
 sortByNewAndHot = New & Hot
+sortByFavorites = Favorites
 
 catalogNoMatch = No {0} items match the query: {1}
 catalogNoTag = No {0} items match the tag: {1}
@@ -110,4 +111,4 @@ transactionsNone = No recent transactions!
 salesTitle = Recent Sales
 salesNone = No recent sales!
 
-itemBought = Purchased {0}
+itemBought = Purchased {0} over at #shop_{1}_{2}
