--- a/src/gwt/frame.gwt.xml.in
+++ b/src/gwt/frame.gwt.xml.in
@@ -1,14 +1,12 @@
 <module>
   <inherits name="com.google.gwt.user.User"/>
   <inherits name="com.google.gwt.i18n.I18N"/>
+  <inherits name="com.threerings.gwt.Utils"/>
 
   <source path="org/gwtwidgets/client"/>
-  <source path="com/samskivert/text"/>
   <source path="com/threerings/io"/>
   <source path="com/threerings/util"/>
   <source path="com/threerings/presents/dobj"/>
-  <source path="com/threerings/gwt/ui"/>
-  <source path="com/threerings/gwt/util"/>
 
   <source path="com/threerings/msoy/data/all"/>
   <source path="com/threerings/msoy/web/data"/>
@@ -26,19 +24,4 @@
   <stylesheet src="/css/frame.css"/>
 
   <entry-point class="client.frame.FrameEntryPoint"/>
-
-  <replace-with class="com.threerings.gwt.ui.WidgetUtilImplMozilla">
-    <when-type-is class="com.threerings.gwt.ui.WidgetUtilImpl"/>
-    <any>
-      <when-property-is name="user.agent" value="gecko"/>
-      <when-property-is name="user.agent" value="gecko1_8"/>
-    </any>
-  </replace-with>
-
-  <replace-with class="com.threerings.gwt.ui.WidgetUtilImplIE6">
-    <when-type-is class="com.threerings.gwt.ui.WidgetUtilImpl"/>
-    <any>
-      <when-property-is name="user.agent" value="ie6"/>
-    </any>
-  </replace-with>
 </module>
