--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -111,4 +111,6 @@ transactionsNone = No recent transactions!
 salesTitle = Recent Sales
 salesNone = No recent sales!
 
-itemBought = Purchased {0} over at #shop_{1}_{2}
+# TODO: Proper linking
+itemBought = Purchased {0} over at #shop-{1}_{2}
+itemSold = Sold {0} over at #shop-{1}_{2}
