Added suiteId to CatalogQuery. Added loadSuiteInfo() to catalog service. Added SuiteCatalogPanel to display the items belonging to a game suite.
The panel needs some minor tweaking (mainly the side bar, whose background image is meant for several more options), and I need to test with actual item and level packs.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -114,3 +114,8 @@ salesNone = No recent sales!
 # TODO: Proper linking
 itemBought = Purchased {0} over at #shop-{1}_{2}
 itemSold = Sold {0} over at #shop-{1}_{2}
+
+#
+# SuiteCatalogPanel
+
+suiteShopTitle = {0} Shop
