Since Ray helpfully went in and started using MsoyUI.formatDate() everywhere I didn't want us to use it yet, I went ahead and implemented the date-relative formatting that will provide the necessary brevity that the full date-time format lacks and was why we weren't already using formatDate() everywhere.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -219,3 +219,10 @@ complainNeedDescription = You must enter a description before filing a complaint
 # PriceLabel
 
 price = Price:
+
+#
+# MsoyUI
+
+dateTime = {0} at {1}
+today = Today
+yesterday = Yesterday
