Moved transactions to the "Me" tab. Damn those mock mockups!

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -125,3 +125,16 @@ passportStampsTitle = {0}''s Passport Stamps
 passportFinishedSeries = Earned {0}
 passportEmptyCategory = {0} has not earned any {1} stamps yet.
 passportPlayerNotFound = The player was not found.
+
+#
+# Transaction history
+
+transactionsTitle = Recent Transactions
+transactionsNone = No recent transactions!
+salesTitle = Recent Sales
+salesNone = No recent sales!
+
+# TODO: Proper linking
+itemBought = Purchased {0} over at #shop-{1}_{2}
+itemSold = Sold {0} over at #shop-{1}_{2}
+
