--- a/src/gwt/me.gwt.xml.in
+++ b/src/gwt/me.gwt.xml.in
@@ -4,6 +4,8 @@
   <source path="com/threerings/msoy/badge/data/all"/>
   <source path="com/threerings/msoy/badge/gwt"/>
   <source path="com/threerings/msoy/person/gwt"/>
+  <source path="com/threerings/msoy/money/data/all"/>
+  <source path="com/threerings/msoy/money/gwt"/>
   
   <source path="client/person"/>
   <source path="client/me"/>
