--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -129,10 +129,8 @@ passportPlayerNotFound = The player was not found.
 #
 # Transaction history
 
-transactionsTitle = Recent Transactions
-transactionsNone = No recent transactions!
-salesTitle = Recent Sales
-salesNone = No recent sales!
+transactionsTitle = Transactions
+transactionsNone = No recent transactions of this type
 
 # TODO: Proper linking
 itemBought = Purchased {0} over at #shop-{1}_{2}
