--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -133,6 +133,6 @@ transactionsTitle = Transactions
 transactionsNone = No recent transactions of this type
 
 # TODO: Proper linking
-itemBought = Purchased {0} over at #shop-{1}_{2}
-itemSold = Sold {0} over at #shop-{1}_{2}
-
+# TODO: Consider moving these dynamic messages out into a seperate file to shrink MeMessagesLookup
+m.itemBought = Purchased {0} over at #shop-{1}_{2}
+m.itemSold = Sold {0} over at #shop-{1}_{2}
