Hmm, it generates the MeMessages fine by translating the dot to an underscore, but chokes because it can't find the underscore version... Just manually underscore it for now

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -134,5 +134,5 @@ transactionsNone = No recent transactions of this type
 
 # TODO: Proper linking
 # TODO: Consider moving these dynamic messages out into a seperate file to shrink MeMessagesLookup
-m.itemBought = Purchased {0} over at #shop-{1}_{2}
-m.itemSold = Sold {0} over at #shop-{1}_{2}
+m_itemBought = Purchased {0} over at #shop-{1}_{2}
+m_itemSold = Sold {0} over at #shop-{1}_{2}
