The item detail page was starting to look like "Your company's app...":
http://stuffthathappens.com/blog/wp-content/uploads/2008/03/simplicity.png

Organized and cleaned it up a bit. Also made NaviUtil methods return
ClickListener since every single caller was wrapping them in a ClickListener
anyway.

--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -42,23 +42,23 @@ msgItemDeleted = Item deleted.
 detailDelete = Delete Item
 detailEdit = Edit Item
 
-detailListTip = You can list this item in the shop.
+detailListTip = You can list this item in the shop:
 detailList = List Item
 
-detailUplistTip = This item is listed in the shop.
+detailUplistTip = This item is listed in the shop:
 detailUplist = Update Listing
 detailUpprice = Update Pricing
 
+detailViewListing = View in Shop
+
 detailSubUplist = Update
 detailSubEdit = Edit
-
-detailGiftTip = You can send this item as a gift when not in use.
-detailGift = Send as Gift
+detailRename = Rename
 
 detailInUse = This item is in use.
 detailInUseInRoom = This item is being used in <a href="#world-s{0}">{1}</a>.
 
-detailRename = Rename
+detailRemixTip = This item can be personalize by remixing.
 detailRemix = Remix
 
 detailRevert = Revert
@@ -66,14 +66,19 @@ detailUpdate = Update/Revert
 detailRevertTip = You have remixed this item, but may revert to the shop copy.
 detailUpdateTip = There is a new version of this item available, you may update to it, but \
   you will lose your remixes and will revert to the shop copy.
-detailRevertNotNeeded = This is the latest version.
-detailConfirmRevert = Are you sure you want to revert to the shop copy? \
-  You will lose any custom remixing you have done.
+
+detailGiftTip = You can send this item as a gift:
+detailGift = Send as Gift
+detailGiftDisabled = In use items cannot be sent as gifts.
 
 detailConfirmDelete = Are you sure you want to delete this item?
 
 errItemMissingName = Please configure the name of this item. Click Edit above to do so.
 errItemMissingDescrip = Please configure a description for this item. Click Edit above to do so.
+
+detailRevertNotNeeded = This is the latest version.
+detailConfirmRevert = Are you sure you want to revert to the shop copy? \
+  You will lose any custom remixing you have done.
 
 #
 # RenameHandler
