Got the side bar menu to dynamically size itself based on the number on items added to it, rather than using a fixed-size background image. Some small cosmetic changes to Ye Olde Game Shoppe panel. Fix my message resource bug that was keeping the favorites panel from showing up (WRLD-302).

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -35,6 +35,7 @@ itemType13 = Trophy Source
 itemType14 = Prize
 itemType15 = Prop
 
+pItemType0 = All
 pItemType1 = Images
 pItemType2 = Stories
 pItemType3 = Furniture
