More item detail tidying up and usabilifying.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -28,7 +28,7 @@ msgNoTags = No tags in use.
 # ItemEntry
 
 addToRoom = Add to room
-moveToRoom = Move to this room
+moveToRoom = Move to room
 removeFromRoom = Take from room
 
 wearAvatar = Wear avatar
