--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -57,6 +57,7 @@ detailRename = Rename
 
 detailInUse = This item is in use.
 detailInUseInRoom = This item is being used in <a href="#world-s{0}">{1}</a>.
+detailNotInUse = This item is not in use.
 
 detailRemixTip = This item can be personalize by remixing.
 detailRemix = Remix
