Unuglified the code and UI of the rename popup.

--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -85,7 +85,6 @@ detailConfirmRevert = Are you sure you want to revert to the shop copy? \
 # RenameHandler
 
 renameTitle = Rename a purchased item
-renameTip = You may customize the name of a purchased item, or revert \
-to the shop name.
+renameTip = Change the name of your purchased item, or revert it \
+  to the shop name.
 renameRevert = Revert
-
