More game detail page cleanup: promoted the game discussions link to a modestly sized orange button, added a game shop button on dev.

--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -14,24 +14,11 @@ noSuchPlayer = We aren''t sure what player you''re talking about.
 gdpTitle = Game Detail
 gdpLoading = Loading game details...
 
-gdpInfoTitle = Game Info:
-
 gdpDevVersion = Note: this is the in-development version of this game. Trophies \
   awarded during this game will not be saved nor will ratings be updated.
 
-gdpNoSingle = This game has no single-player mode.
-
-gdpQuickSingle = Quick Single
-gdpQuickSingleTip = Start a single-player game
-
-gdpQuickMulti = Quick Multi
-gdpQuickMultiTip = We''ll pick or start a multiplayer game for you
-
-gdpCustomGame = Custom Game
-gdpCustomGameTip = You pick a game to join or start a new one
-
-gdpOrWithFriends = or play with friends:
-gdpMultiplayer = Multiplayer
+gdpDiscuss = Discussions
+gdpShop = Game Shop
 
 tabInstructions = Instructions
 tabComments = Comments
@@ -49,7 +36,6 @@ ipInstructionsTooLong = Your instructions are too long. Please shorten them by \
 
 # GameBitsPanel
 
-bitsWhirledLink = Discuss this game in its whirled
 bitsGenre = Genre:
 bitsPlayers = Players:
 bitsAvgDuration = Avg. Time:
