Added sales pitch blurbs for level and item packs, display said blurbs where we do our other item type blurbs in the shop. Modified the SideBar to shrink the font size a smidgen for long item names (hackasaurus, yay for HTML). Other small tidying.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -68,8 +68,8 @@ catIntro9 = Set your room''s stage with a backdrop. Make your room into the stre
   of Paris, a nightclub or the surface of the moon.
 catIntro10 = Have some fun! Toys are interactive items you and your friends can \
   play with in your room.
-catIntro11 = Not used.
-catIntro12 = Not used.
+catIntro11 = Pick up level packs and experience more of your favorite games!
+catIntro12 = Customize your experience with item packs and get just the stuff you want.
 catIntro13 = Not used.
 catIntro14 = Not used.
 catIntro15 = Not used.
