Allow conversations with unread messages to be deleted, but only if the client knows they have unread messages.

--- a/src/gwt/client/mail/MailMessages.properties
+++ b/src/gwt/client/mail/MailMessages.properties
@@ -12,7 +12,10 @@ mailTitle = Mail
 
 deleteConfirm = Are you sure you want to delete this conversation? \
   All the messages in it will be deleted.
-deleteNotDeleted = The conversation was not deleted as it has new messages.
+deleteUnreadConfirm = NOTE: This conversation has unread messages. Are you sure \
+  you want to delete it?
+deleteNotDeleted = The conversation was not deleted as it has new messages. \
+  Click "Check Mail" or refresh the page to see them.
 deleteDeleted = The conversation has been deleted.
 
 #
@@ -21,7 +24,6 @@ deleteDeleted = The conversation has been deleted.
 mailNoMail = You have no mail.
 mailNoSubject = <no subject>
 mailCheck = Check Mail
-mailNoDeleteTip = You can''t delete a conversation that has unread messages
 mailDeleteTip = Delete this conversation
 
 #
