Translation for m.item_magicfree.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -135,4 +135,5 @@ transactionsNone = No recent transactions of this type
 # TODO: Proper linking
 # TODO: Consider moving these dynamic messages out into a seperate file to shrink MeMessagesLookup
 m_item_bought = Purchased {0} over at #shop-{1}_{2}
+m_item_magicfree = Magic-purchased {0} over at #shop-{1}_{2}
 m_item_sold = Sold {0} over at #shop-{1}_{2}
