--- a/src/gwt/frame.gwt.xml.in
+++ b/src/gwt/frame.gwt.xml.in
@@ -9,6 +9,7 @@
   <source path="com/threerings/presents/dobj"/>
 
   <source path="com/threerings/msoy/data/all"/>
+  <source path="com/threerings/msoy/money/data/all"/>
   <source path="com/threerings/msoy/web/data"/>
   <source path="com/threerings/msoy/web/client"/>
 
