More dependencies, more uncompiling code, and some documentation to boot.

--- a/build.xml
+++ b/build.xml
@@ -950,6 +950,7 @@
       <arg line="-library-path ${flexsdk.dir}/frameworks/libs/flex.swc"/>
       <arg line="-library-path ${deploy.dir}/lib/tweener.swc"/>
       <arg line="-library-path ${deploy.dir}/lib/corelib.swc"/>
+      <arg line="-library-path ${deploy.dir}/lib/flexlib.swc"/>
       <arg line="-library-path ${deploy.dir}/lib/naryalib-0.0-SNAPSHOT.swc"/>
       <arg line="-library-path ${deploy.dir}/lib/player-env-0.0-SNAPSHOT.swc"/>
       <arg line="-library-path ${deploy.dir}/lib/nenyalib-0.0-SNAPSHOT.swc"/>
