--- a/build.xml
+++ b/build.xml
@@ -946,8 +946,7 @@
       <jvmarg value="-Xbootclasspath/p:${flexsdk.dir}/asdoc/lib/xalan.jar"/>
       <jvmarg value="-Dos.name=Windows"/>
       <arg value="+flexlib=${flexsdk.dir}/frameworks"/>
-      <arg line="-library-path ${flexsdk.dir}/frameworks/libs/framework.swc"/>
-      <arg line="-library-path ${flexsdk.dir}/frameworks/libs/flex.swc"/>
+      <arg line="-library-path ${flexsdk.dir}/frameworks/libs"/>
       <arg line="-library-path ${deploy.dir}/lib/tweener.swc"/>
       <arg line="-library-path ${deploy.dir}/lib/corelib.swc"/>
       <arg line="-library-path ${deploy.dir}/lib/flexlib.swc"/>
