Some uses of new icon and whatnot. First use of DeploymentConfig.barsEnabled

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -50,7 +50,8 @@ headerLogon = Logon!
 statusLogoff = Logoff
 
 coinsTip = Your current Coins balance
-goldTip = Your current Gold balance
+barsTip = Your current Bars balance
+blingTip = Your current Bling balance
 levelTip = Your current Level
 
 #
