--- a/src/gwt/frame.gwt.xml.in
+++ b/src/gwt/frame.gwt.xml.in
@@ -1,28 +1,7 @@
 <module>
-  <inherits name="com.google.gwt.user.User"/>
-  <inherits name="com.google.gwt.i18n.I18N"/>
-  <inherits name="com.threerings.gwt.Utils"/>
-
-  <source path="org/gwtwidgets/client"/>
-  <source path="com/threerings/io"/>
-  <source path="com/threerings/util"/>
-  <source path="com/threerings/presents/dobj"/>
-
-  <source path="com/threerings/msoy/data/all"/>
-  <source path="com/threerings/msoy/money/data/all"/>
-  <source path="com/threerings/msoy/web/data"/>
-  <source path="com/threerings/msoy/web/client"/>
-
+  <inherits name="global"/>
   <source path="client/frame"/>
-  <source path="client/images"/>
-  <source path="client/shell"/>
-  <source path="client/ui"/>
-  <source path="client/util"/>
-
   <public path="public/frame"/>
-  <stylesheet src="/css/global.css"/>
-  <stylesheet src="/css/gwt.css"/>
-  <stylesheet src="/css/frame.css"/>
-
+  <stylesheet src="frame.css"/>
   <entry-point class="client.frame.FrameEntryPoint"/>
 </module>
