Ability to list an item for bars. If you try to buy it it'll use coins for now.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -78,10 +78,12 @@ doUpdateNeedsDescrip = You can update your item''s shop description with \
 doListPricingHeader = Item Pricing
 
 doListStrategy = Strategy:
-doListFlowCost = Coin Cost:
-doListGoldCost = Bars Cost:
+doListCost = Cost:
 doListSalesTarget = Sales Target:
 doListHdrPrice = Listing cost:
+
+currencyCoins = Coins
+currencyBars = Bars
 
 doListBtnGo = List it!
 doUpdateBtnGo = Update it!
