We need client/trophy here as well, though I should factor out whatever landing is using from games into its own module as well.

--- a/src/gwt/landing.gwt.xml.in
+++ b/src/gwt/landing.gwt.xml.in
@@ -15,6 +15,7 @@
   <source path="com/threerings/msoy/landing/gwt"/>
 
   <source path="client/comment"/>
+  <source path="client/trophy"/>
   <source path="client/games"/>
   <source path="client/msgs"/>
   <source path="client/whirleds"/>
