Use a ClickCallback when joining a whirled so that you can't click multiple times if your browser is being slow and queue up a bunch of join requests, all but the first of which will fail. Also removed my excessive use of quotes in the confirmation message and capitalized whirled according to our new policy. Whirled == website, whirled == group.

--- a/src/gwt/client/whirleds/WhirledsMessages.properties
+++ b/src/gwt/client/whirleds/WhirledsMessages.properties
@@ -89,9 +89,9 @@ detailManageRooms = Manage Rooms
 detailPlayGame = Play the Game!
 
 detailJoin = Join this Whirled
-detailJoinPrompt = Joining will add this Whirled''s Discussions to your \
-  "My Discussions" page and allow this Whirled to add messages to the \
-  "My News" section of your "Me" page.
+detailJoinPrompt = Joining will add this whirled''s discussions to your \
+  My Discussions page and allow this whirled to add messages to the \
+  My News section of your Me page.
 detailJoinContext = Would you still like to join "{0}"?
 
 detailLeave = Leave this Whirled
