--- a/src/gwt/client/whirleds/WhirledsMessages.properties
+++ b/src/gwt/client/whirleds/WhirledsMessages.properties
@@ -42,8 +42,8 @@ editCharter = Charter
 editCatalogType = Shop Browse Type
 editCatalogTag = Shop Tag
 
-errInvalidGroupName = The Whirled name must start with a character or number.
-errTagsOnExclusive = In order to change the Whirled policy to Exclusive, please remove all tags.
+errInvalidGroupName = The whirled name must start with a character or number.
+errTagsOnExclusive = In order to change the whirled policy to Exclusive, please remove all tags.
 
 #
 # GalaxyPanel
@@ -54,7 +54,7 @@ galaxyIntro = Whirleds can be explored or you can just hang out in them and chat
 galaxyCreateTitle = Create a New Whirled
 galaxyCreateBlurb = If you think you and your friends have the chops to create \
   an exciting place for people to hang out, then you should create your own \
-  Whirled!
+  whirled!
 galaxyCreate = Create New Whirled
 
 galaxyBrowseTitle = Browse Whirleds
@@ -62,7 +62,7 @@ galaxySearch = Search
 
 galaxyMemberCount = {0} people online
 
-galaxyNoGroups = No Whirleds found!
+galaxyNoGroups = No whirleds found!
 
 galaxyPopularTags = Popular Tags:
 galaxyNoPopularTags = No popular tags found!
@@ -121,14 +121,14 @@ detailTabRooms = Rooms
 detailTabDiscussions = Recent Discussions
 
 detailBackToDiscussions = << Back to Discussions
-detailNoCharter = This Whirled has nothing to say for itself.
+detailNoCharter = This whirled has nothing to say for itself.
 
 detailRoomsDetail = These rooms are owned by {0}.  Click a room to enter it.
 detailRoomsTitle = {0}''s Rooms
 detailCallersRoomsTitle = Your Rooms
 detailTransferRoom = Transfer Room to {0}
-detailTransferRoomInfo = Transferring your room to this Whirled will allow any manager of the \
-Whirled to edit the room. The room will be removed for your rooms list and added to this Whirled. \
+detailTransferRoomInfo = Transferring your room to this whirled will allow any manager of the \
+whirled to edit the room. The room will be removed for your rooms list and added to this whirled. \
 You cannot transfer your current home room, and this cannot be undone.
 detailBrowseShop = Shop for related {0}!
 
@@ -147,7 +147,7 @@ wmpInvite = Invite Someone to Join
 # WhirledDiscussionPanel
 
 discussionRss = Subscribe to<br/>Discussions
-discussionNoThreads = There are no discussions in this Whirled yet.
+discussionNoThreads = There are no discussions in this whirled yet.
 discussionPostedIn = posted in
 discussionPostedBy = posted by
 discussionAt = at {0}
@@ -161,10 +161,10 @@ myMembersOnline = {0} online now!
 myUnreadThreads = {0} unread threads
 myLatestThread = Latest thread:
 myDiscussions = View All Discussions
-myManagerStarTitle = You are a manager of this Whirled
+myManagerStarTitle = You are a manager of this whirled
 myPostedBy = by
 myToday = Today
-myNoWhirleds = You haven''t joined any Whirleds yet.
+myNoWhirleds = You haven''t joined any whirleds yet.
 
 mySortBy = Sort by:
 mySortByPeopleOnline = People Online
