Sticky not stick.

--- a/src/gwt/client/msgs/MsgsMessages.properties
+++ b/src/gwt/client/msgs/MsgsMessages.properties
@@ -144,7 +144,7 @@ ntpAnnounce = Announcement:
 ntpAnnounceTip = Announcement threads are specially marked and result in an \
   entry being posted to the feed of all members.
 
-ntpSticky = Stick:
+ntpSticky = Sticky:
 ntpStickyTip = Sticky threads always show up at the top of the forum''s thread list.
 
 ntpFirstMessage = First message:
