Everyone else gets a tooltip in the header, so should mail.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -52,6 +52,7 @@ statusLogoff = Logoff
 coinsTip = Your current Coins balance
 barsTip = Your current Bars balance
 levelTip = Your current Level
+mailTip = You have new mail
 
 #
 # ProfileBlurb and CreateAccountPanel
