* Money logic now handles any dobject updates that are necessary for the operation being performed.  Thus, it should only be used on the world server -- any operations needed by the game server should be communicated to the world server. * Changed some game server dependencies to call WorldServerClient instead of invoking MoneyLogic directly. * Added option to call awardCoins() without explicitly notifying interested parties through MemberObject.  This is necessary for games, since as coins are earned (but not awarded), they will be updating MemberObject as necessary. * Bars are now communicated through MemberObject. * Added a "Get Bars" button to the item listing details page (UI may be redesigned in the future).  This will go to billing via the property "billing_url" in msoy-server.properties.

--- a/build.xml
+++ b/build.xml
@@ -417,6 +417,7 @@
         <filter token="static_media_url" value="${static_media_url}"/>
         <filter token="dev_deployment" value="${dev_deployment}"/>
         <filter token="recaptcha_public" value="${recaptcha_token}"/>
+        <filter token="billing_url" value="${billing_url}"/>
       </filterset>
     </copy>
   </target>
@@ -531,6 +532,7 @@
         <filter token="dev_deployment" value="${dev_deployment}"/>
         <filter token="static_media_url" value="${static_media_url}"/>
         <filter token="log_levels_config" value="${log_levels_config}"/>
+        <filter token="billing_url" value="${billing_url}"/>
       </filterset>
     </copy>
   </target>
