--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -87,6 +87,8 @@ boughtOtherUsage = Click above to add your new item to this room!
 
 favoritesCount = Favorites:
 
+buyBars = Get Bars
+
 #
 # FavoritesPanel
 
